typescript/checker/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfOrOrOperator.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            461,
        ),
        hi: BytePos(
            462,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfOrOrOperator.ts:9:50
  |
9 |     return typeof x !== "string" || ((x = 10) || x); // string | number
  |                                                  ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            642,
        ),
        hi: BytePos(
            643,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfOrOrOperator.ts:13:55
   |
13 |     return typeof x !== "string" || ((x = "hello") || x); // string | number
   |                                                       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            845,
        ),
        hi: BytePos(
            846,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfOrOrOperator.ts:18:12
   |
18 |         || x;   // boolean
   |            ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1180,
        ),
        hi: BytePos(
            1181,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfOrOrOperator.ts:25:12
   |
25 |         || x));   // boolean
   |            ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1402,
        ),
        hi: BytePos(
            1403,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfOrOrOperator.ts:31:11
   |
31 |         ? x // boolean
   |           ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1772,
        ),
        hi: BytePos(
            1773,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInRightOperandOfOrOrOperator.ts:42:24
   |
42 |         ? ((x = 10) && x.toString()) // number | boolean | string
   |                        ^

